--- a/index.html
+++ b/index.html
@@ -175,9 +175,12 @@
                 <select name="sitio" required>
                     <option value="">Seleccione lugar...</option>
                     <option value="Almacén">Almacén</option>
-                    <option value="Oficinas">Oficinas</option>
+                    <option value="Biología">Biología</option>
+                    <option value="Embarques">Embarques</option>
                     <option value="Molinos">Molinos</option>
-                    <option value="Taller Industrial">Taller Industrial</option>
+                    <option value="Oficinas">Oficinas</option>
+                    <option value="Registro (Caseta)">Registro (Caseta)</option>
+                    <option value="Taller de Mantto. Industrial">Taller de Mantto. Industrial</option>
                 </select>
             </div>
         </div>
@@ -413,4 +416,5 @@
     }
 </script>
 </body>
+
 </html>
