--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                     <option value="Oficinas">Oficinas</option>
                     <option value="Registro (Caseta)">Registro (Caseta)</option>
                     <option value="Taller de Mantto. Industrial">Taller de Mantto. Industrial</option>
+                     <option value="Taller de Mantto. Automotriz">Taller de Mantto. Automotriz</option>
                 </select>
             </div>
         </div>
@@ -220,6 +221,10 @@
                     <label class="checkbox-item"><input type="checkbox" name="falta" value="Capacitación"> Capacitación</label>
                     <label class="checkbox-item"><input type="checkbox" name="falta" value="Herramientas"> Herramientas</label>
                     <label class="checkbox-item"><input type="checkbox" name="falta" value="EPP"> Equipo de Protección (EPP)</label>
+                    <label class="checkbox-item"><input type="checkbox" name="falta" value="Materiales"> Materiales</label>
+                    <label class="checkbox-item"><input type="checkbox" name="falta" value="Equipos adecuados"> Equipos adecuados</label>
+                    <label class="checkbox-item"><input type="checkbox" name="falta" value="Análisis">Falta el análisis previo de la tarea para identificar los peligros</label>
+                     <label class="checkbox-item"><input type="checkbox" name="falta" value="Controles">Falta instalar los controles adecuados para evitar un accidente</label>
                 </div>
             </div>
 
@@ -418,3 +423,4 @@
 </body>
 
 </html>
+
