--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         .checkbox-item { 
             display: flex; 
-            align-items: center;
+            align-items: left;
             padding: 8px;
             cursor: pointer;
             font-size: 0.85rem;
@@ -423,4 +423,5 @@
 </body>
 
 </html>
+
 
