--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         doc.setTextColor(0, 35, 68); 
         doc.text("Reporte de Condición Insegura", 50, 20);
         doc.setFontSize(10);
-        doc.text("Insumos y Servicios de Seguridad Agrícola (ISYSA)", 50, 26);
+        doc.text("Industria Salinera de Yucatán S.A de C.V.", 50, 26);
         
         doc.autoTable({
             startY: 40,
@@ -534,3 +534,4 @@
 </script>
 </body>
 </html>
+
